# memnix-discord

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
src/api/: access.rs  answer.rs  card.rs  deck.rs  mem.rs  mod.rs  revision.rs  user.rs
src/general/: about.rs  card.rs  mod.rs  ping.rs  pong.rs
src/memnix/: card.rs  deck.rs  mod.rs  next.rs  utils.rs  verifications.rs
src/models/: access.rs  answer.rs  card.rs  deck.rs  mem.rs  mod.rs  revision.rs  user.rs
src/utils/: constants.rs
