[package]
name = "memnix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version= "0.10.9", default-features = false, features = ["client", "gateway", "collector", "rustls_backend", "model", "framework", "standard_framework", "cache"] }
tokio = { version = "1.10.0", features = ["macros", "rt-multi-thread", "full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.4"
chrono = "0.4.19"

